# ElementFiniFusee

./: .gitignore  CLAUDE.md  Prompt.txt  README.md  SYNTHESE_IMPLEMENTATION.md  VALIDATION_REPORT.md  assembly.py  boundary_conditions.py  demo_reentry.py  fem_elements.py  generate_ariane5_mesh.py  generate_ariane5_simple.py  generate_mesh_python.py  generate_rocket_mesh.py  live_animation.py  main.py  mesh_reader.py  parametric_study.py  pyproject.toml  reentry_profile.py  requirements.txt  rocket_geometry.geo  rocket_mesh.msh  setup.py  solver.py  visualization.py
.claude/: settings.local.json
.claude/agents/: aerothermal-physics.md  code-architecture.md  fem-numerics.md  testing-validation.md  visualization-docs.md
data/meshes/: rocket_geometry.geo  rocket_mesh.msh
docs/: FORMULATION_1D_COMPLETE.md  README.md  SYNTHESE_IMPLEMENTATION.md
resultats/: results_parametric_study.csv
scripts/: analyze_frame_distribution.py  compare_validation.py  demo_reentry.py  exercise1_1d_thermal.py  exercise2_manufactured.py  postprocess_shield_results.py  run_parametric_study.py  shield_simulation.edp  validate_results.py  visualize_rocket_profile.py
src/: __init__.py
src/core/: __init__.py  assembly.py  assembly_1d.py  boundary_conditions.py  fem_elements.py  fem_elements_1d.py  nonlinear_solver.py  solver.py
src/mesh/: __init__.py  mesh_1d.py  mesh_reader.py  utils.py
src/physics/: __init__.py  aerothermal.py  constants.py  parametric_study.py  (+1 more)
tests/: __init__.py  test_fem_1d.py  test_manufactured_solution.py  test_radiation.py  test_regression.py
(+16 files in other folders)
